# TetraMod

./: .gitignore  AGENTS.md  README.md  mafia_data_dirstruct.txt  pyproject.toml  scripts.sh  to_do.md  train_2phase.sh  train_HeLa.sh  train_mix_stage1.sh  train_mix_stage1_6motif_dataset.sh  train_mix_stage1_mafia_modidec_dataset.sh  train_modidec_m6a_stage1_dataset.sh  train_modidec_mafia_mix.sh  train_promote.sh  train_promote_llp.sh
dataset_check/: check_mafia_stage1_dataset.py  plot_mafia_stage1_visuals.py
docs/: model_promote_plan.md  stage1_dataset_unification.md  stage1_generalization_handoff.md  train_basecaller_flow.md
gen_data/: build_llp_mixture_dataset.py  build_real_llp_from_ratio_ivt.py  build_synthetic_llp_from_controls.py  compare.md  convert_fast5_tar_to_pod5.py  create_dataset_bam_aligned_highmod.py  create_dataset_bam_aligned_highmod_commands.md  create_dataset_dorado_ctc_like.py  create_mafia_lomo_datasets.py  create_mafia_synthetic_stage1_dataset.py  create_modidec_m6a_stage1_dataset.py  gen_data_dorado_ctc_like.sh  mafia_oligos.tsv  mafia_runs.tsv  mafia_stage1_workflow.md  make_mod_targets_m6a.py  merge_mafia_stage1_datasets.py  test.py  test2.py  test3.py
references/: ModiDeC.txt  ModiDeC_supplementary_file_1_20250513_NAR.txt  s41467-024-47661-2.txt
tests/: test_cli_smoke.py  test_modbam_gold_sites.py
validate/: README.md  __init__.py  check_base_mod_alignment.py  check_gold_coordinate_conventions.py  compare_basecaller_bams.py  diagnose_llp_dataset.py  evaluate_control_bags.py  evaluate_llp_bags.py  evaluate_mafia_stage1.py  (+9 more)
(+46 files in other folders)
